# game_of_life_wallpaper

./: CMakeLists.txt  Messages.sh  README.md
package/: metadata.desktop  metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.qml  main.qml
package/contents/ui/code/: life.js
plugin/: CMakeLists.txt  gameoflife.cpp  gameoflife.h  life_wallpaperplugin.cpp  life_wallpaperplugin.h  qmldir
